--- a/web/resources/style/default.css
+++ b/web/resources/style/default.css
@@ -138,3 +138,15 @@ ul.crumbtrail > :before {
 .preview-container a:visited, .image-thumbnail-box a:visited {
 	color: darkorange;
 }
+
+
+.nfo {
+	color: silver;
+	display: table;
+	background-color: rgba( 0, 0, 96, 1.0 );;
+	border-color: rgba( 0, 0, 0, 0.5 );
+	border-width: 0 16px;
+	border-style: solid;
+	padding: 16px 32px;
+	margin-left: auto;
+	margin-right: auto;
